add institute dashboard and student details

--- a/core/templates/admission/admission.html
+++ b/core/templates/admission/admission.html
@@ -627,7 +627,7 @@
                 <!-- START -PREVIOUS ACADEMIC INFORMATION -->
                 <div class="row mt-2">
                     <div class="col-12 mt-5">
-                        <p class="fs-4">Previous Academic Information</p>
+                        <p class="fs-4">Previous Academic Information <span class="text-warning">(If Applicable)</span></p>
                     </div>
                     <!-- prev_institute_name -->
                     <div class="col-md-6">
