--- a/core/templates/public/landing.html
+++ b/core/templates/public/landing.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <div class="container">
-    {% include '_includes/_nav_public.html' %}
+    {% include '_includes/_nav/_nav_public.html' %}
     <p class="fs-lg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat porro suscipit explicabo autem aut
         minus neque
         ut harum voluptatum expedita labore nesciunt, quae recusandae illo, doloremque blanditiis quasi? Ad, enim!</p>
