add auth system to access /institute/...  route

--- a/core/templates/_includes/_nav/_dashboard_sidebar.html
+++ b/core/templates/_includes/_nav/_dashboard_sidebar.html
@@ -35,7 +35,7 @@
                     </a>
                 </li>
                 <li class="nav-item m-2 mb-0 rounded">
-                    <a class="nav-link text-white d-flex align-items-center gap-2" href="#">
+                    <a class="nav-link text-white d-flex align-items-center gap-2" href="{{url_for('auth.institute_logout')}}">
                         <i class="bi bi-graph-up"></i>
                         Logout
                     </a>
